[package]
name = "rust-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.1"
dashmap = "4.0"
bytes = "1.0"
nom = "6.0"
thiserror = "1.0"
warp = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.3"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

#[[test]]
#name = "config_tests"
#path = "tests/config_tests.rs"
#
#[[test]]
#name = "logger_tests"
#path = "tests/logger_tests.rs"
#
#[[test]]
#name = "metrics_tests"
#path = "tests/metrics_tests.rs"
#
#[[test]]
#name = "policy_tests"
#path = "tests/policy_tests.rs"
#
#[[test]]
#name = "tracker_tests"
#path = "tests/tracker_tests.rs"
#
#[[test]]
#name = "gateway_tests"
#path = "tests/gateway_tests.rs"
#
#[[test]]
#name = "inspection_tests"
#path = "tests/inspection_tests.rs"
#
#[[test]]
#name = "end_to_end_tests"
#path = "tests/end_to_end_tests.rs"